add basic user crud service

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Error</title>
     <link href="../static/css/error.css" th:href="@{/css/error.css}" rel="stylesheet" />
     <script type="text/javascript" th:src="@{/js/error.js}"></script>
 </head>
